<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY schema "recipebinder">]>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Recipe Binder</string>
    <string name="menu_import">Import</string>
    <string name="about">About</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="create">Create</string>
    <string name="dialog_new_recipe_title">New Recipe</string>
    <string name="toast_recipe_name">Please enter a recipe name</string>
    <string name="extra_recipe_id" translatable="false">recipeId</string>
    <string name="extra_view_mode" translatable="false">viewMode</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="ingredient_list">ingredient list</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_list">instruction list</string>
    <string name="gram">Gram</string>
    <string name="pound">Pound</string>
    <string name="milliliter">Milliliter</string>
    <string name="liter">Liter</string>
    <string name="gallon">Gallon</string>
    <string name="quart">Quart</string>
    <string name="pint">Pint</string>
    <string name="tea_spoon">Tea Spoon</string>
    <string name="table_spoon">Table Spoon</string>
    <string name="ounce">Ounce</string>
    <string name="cup">Cup</string>
    <string name="_3_quarters" translatable="false">&#190;</string>
    <string name="_2_thirds" translatable="false">\u2154</string>
    <string name="_1_half" translatable="false">&#189;</string>
    <string name="_1_third" translatable="false">&#8531;</string>
    <string name="_1_quarter" translatable="false">&#188;</string>
    <string name="quantity">quantity</string>
    <string name="delete">Delete</string>
    <string name="minutes">minutes</string>
    <string name="instant_pot">Instant Pot</string>
    <string name="stove_top">Stove Top</string>
    <string name="oven">Oven</string>
    <string name="sous_vide">Sous Vide</string>
    <string name="fast">Fast</string>
    <string name="easy">Easy</string>
    <string name="healthy">Healthy</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="recipe_filter">Recipe filter</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="abbreviation_cup">c</string>
    <string name="abbreviation_ounce">oz</string>
    <string name="abbreviation_tablespoon">Tbsp</string>
    <string name="abbreviation_teaspoon">tsp</string>
    <string name="abbreviation_pint">pt</string>
    <string name="abbreviation_quart">qt</string>
    <string name="abbreviation_gallon">gal</string>
    <string name="abbreviation_liter">l</string>
    <string name="abbreviation_milliliter">ml</string>
    <string name="abbreviation_pound">lb</string>
    <string name="abbreviation_gram">g</string>
    <string name="entree">Entree</string>
    <string name="side">Side</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="new_instruction">New instruction</string>
    <string name="update_instruction">Update instruction</string>
    <string name="cook_type">Cook type</string>
    <string name="course">Course</string>
    <string name="dietary_and_other">Dietary and other</string>
    <string name="recipe_list">recipe list</string>
    <string name="save_ingredient">save ingredient</string>
    <string name="add_ingredient">add ingredient</string>
    <string name="add_instruction">Add instruction</string>
    <string name="cook_time_hint">Cook Time</string>
    <string name="metadata">Metadata</string>
    <string name="edit_recipe_title">Recipe Editor</string>
    <string name="edit">Edit</string>
    <string name="ingredient_format"><xliff:g id="amount">%1$s</xliff:g> <xliff:g
        id="name">%2$s</xliff:g></string>
    <string name="convert">Convert</string>
    <string name="convert_unit_format">Convert <xliff:g id="unit">%s</xliff:g> to</string>
    <string name="convert_unit_type">convert unit type</string>
    <string name="save">save</string>
    <string name="abandon_warning_text">You have unsaved changes</string>
    <string name="abandon">abandon</string>
    <string name="delete_this_confirmation_message">Delete this ingredient?</string>
    <string name="hourglass">hourglass</string>
    <string name="copy_to_clipboard">Recipe Text</string>
    <string name="copy_import_text">Importable text</string>
    <string name="qr_code">qr code</string>
    <string name="app_scheme" translatable="false">&schema;</string>
    <string name="recipe_uri_path" translatable="false">recipe</string>
    <string name="list_join_format">,\n\t</string>
    <string name="title_join_format">:\n\t</string>
    <string name="copied_toast">Copied to clipboard</string>
    <string name="paste_example">&schema;://paste…</string>
    <string name="error_import_failed">Unable to import provided recipe paste</string>
    <string name="import_success">Recipe \"<xliff:g id="recipe_name">%s</xliff:g>\" imported successfully</string>
    <string name="error_recipe_too_large">This recipe is too big to export as a blob</string>
    <string name="sharing">Sharing</string>
    <string name="fractional_measurement">Fractional measurement</string>
    <string name="measurement_units">Measurement</string>
    <string name="app_logo">app logo</string>
    <string name="mortar_amp_pestle">Mortar &amp; Pestle</string>
    <string name="torch">Torch</string>
    <string name="immersion_blender">Immersion Blender</string>
    <string name="blender">Blender</string>
    <string name="food_processor">Food Processor</string>
    <string name="mixer">Mixer</string>
    <string name="tools">Tools</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="servings">Servings</string>
    <string name="about_contents_1">This app is a project I have worked on in my spare time</string>
    <string name="about_contents_2">If you:</string>
    <string name="about_contents_3">\u2022 Have any feature requests or suggestions</string>
    <string name="about_contents_4">\u2022 Just want to share your appreciation</string>
    <string name="about_contents_5">Feel free to send your comments to me directly</string>
    <string name="about_contents_6">- Jeff</string>
    <string name="contact">Contact</string>
    <string name="support_the_app">Support the app</string>
    <string name="personal_website">Personal Website</string>
    <string name="contact_uri" translatable="false">mailto:jeff@jeffbrandon.me</string>
    <string name="website_uri" translatable="false">http://jeffbrandon.me</string>
    <string name="support_uri" translatable="false">https://buymeacoffee.com/jeffbrandon</string>
    <string name="dairy">Dairy</string>
    <string name="peanuts">Peanuts</string>
    <string name="soy">Soy</string>
    <string name="wheat">Wheat</string>
    <string name="tree_nuts">Tree nuts</string>
    <string name="shellfish">Shellfish</string>
    <string name="sesame">Sesame</string>
    <string name="excludes">Excludes</string>
    <string name="import_helper">Paste a recipe blob here to add a recipe from a QR code or friend to your collection</string>
</resources>
