<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/ingredient"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/input_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_input_layout"
            style="@style/TextInputStyle"
            android:layout_width="@dimen/ingredient_dialog_input_width"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            app:boxCornerRadiusBottomEnd="@dimen/square_corner"
            app:boxCornerRadiusTopEnd="@dimen/square_corner"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_layout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredient"
            app:boxCornerRadiusBottomStart="@dimen/square_corner"
            app:boxCornerRadiusTopStart="@dimen/square_corner"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:orientation="horizontal"
        >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/fraction_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            app:singleSelection="true"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_quarter"
                style="@style/CheckableChip"
                android:text="@string/_1_quarter"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_third"
                style="@style/CheckableChip"
                android:text="@string/_1_third"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_half"
                style="@style/CheckableChip"
                android:text="@string/_1_half"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_2_thirds"
                style="@style/CheckableChip"
                android:text="@string/_2_thirds"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_3_quarter"
                style="@style/CheckableChip"
                android:text="@string/_3_quarters"
                />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:orientation="horizontal"
        >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/unit_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/cup_chip"
                style="@style/CheckableChip"
                android:text="@string/cup"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/ounce_chip"
                style="@style/CheckableChip"
                android:text="@string/ounce"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/tbsp_chip"
                style="@style/CheckableChip"
                android:text="@string/table_spoon"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/tsp_chip"
                style="@style/CheckableChip"
                android:text="@string/tea_spoon"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/pint_chip"
                style="@style/CheckableChip"
                android:text="@string/pint"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/quart_chip"
                style="@style/CheckableChip"
                android:text="@string/quart"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/gallon_chip"
                style="@style/CheckableChip"
                android:text="@string/gallon"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/liter_chip"
                style="@style/CheckableChip"
                android:text="@string/liter"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/milliliter_chip"
                style="@style/CheckableChip"
                android:text="@string/milliliter"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/pound_chip"
                style="@style/CheckableChip"
                android:text="@string/pound"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/gram_chip"
                style="@style/CheckableChip"
                android:text="@string/gram"
                />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="@dimen/margin_fab"
            android:contentDescription="@string/convert_unit_type"
            android:text="@string/convert"
            app:icon="@drawable/ic_scale_balance"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_fab"
            android:contentDescription="@string/delete"
            android:text="@string/delete"
            app:icon="@drawable/ic_delete_24"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_ingredient_button"
            style="@style/FabStyle.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/margin_fab"
            android:contentDescription="@string/save_ingredient"
            app:srcCompat="@drawable/save_to_edit"
            />
    </FrameLayout>

</LinearLayout>
