<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:paddingBottom="@dimen/margin_medium"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cook_time_layout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cook_time_hint"
        android:paddingBottom="@dimen/margin_medium"
        app:startIconContentDescription="@string/hourglass"
        app:startIconDrawable="@drawable/ic_hourglass_empty_black_24dp"
        app:suffixText="@string/minutes"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cook_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
