<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="@dimen/margin_xxxlarge"
        android:contentDescription="@string/qr_code"
        />

    <Button
        android:id="@+id/copy_raw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:text="@string/copy_to_clipboard"
        />

    <Button
        android:id="@+id/copy_uri_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:text="@string/copy_import_text"
        />

</LinearLayout>
